Routing strategy improved

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -4,19 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Orinoco, une marque réputée pour ses ours en peluches et la diversité de sa collection. Une touche haut de gamme dans l'univers des peluches !" />
-    <title>Orinoco - La meilleure sélection d'ours en peluche - Accueil</title>
+    <title>Orinoco - La meilleure sélection d'ours en peluche</title>
     <script src="https://kit.fontawesome.com/a915338d04.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="navbar__container">
         <div class="navbar__inner-container">
-            <img src="./assets/img/logo.webp" alt="Orinoco logo" />
-            <a href="./panier.html" aria-label="Aller au panier"><i class="fas fa-shopping-cart"></i></a>
+            <a href="/" aria-label="Aller à l'accueil"><img src="./assets/img/logo.webp" alt="Orinoco logo" /></a>
+            <a href="/#panier" aria-label="Aller au panier"><i class="fas fa-shopping-cart"></i></a>
         </div>
     </nav>
-    <main id="main">
-        <section id="bearList"></section>
-        <section id="bearView"></section>
-    </main>
+    <main id="main"></main>
 </body>
 </html>
