--- a/src/static/index.html
+++ b/src/static/index.html
@@ -8,12 +8,7 @@
     <script src="https://kit.fontawesome.com/a915338d04.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav class="navbar__container">
-        <div class="navbar__inner-container">
-            <a href="/" aria-label="Aller à l'accueil"><img src="./assets/img/logo.webp" alt="Orinoco logo" /></a>
-            <a href="/#panier" aria-label="Aller au panier"><i class="fas fa-shopping-cart"></i></a>
-        </div>
-    </nav>
+    <nav class="navbar__container" id="navbar"></nav>
     <main id="main"></main>
 </body>
 </html>
