--- a/src/static/index.html
+++ b/src/static/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <nav class="navbar__container" id="navbar"></nav>
-    <main id="main"></main>
+    <main id="main" class="main__wrapper"></main>
 </body>
 </html>
